# twinLab-Interface

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  scrap.ipynb
.github/: CODEOWNERS  bug_report.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/api/: analyse_dataset.py  api.py  delete_dataset.py  delete_model.py  example.py  generate_upload_url.py  get_calibration_curve_model.py  get_candidate_points_model.py  get_candidate_points_request_model.py  get_candidate_points_response_model.py  get_initial_design.py  get_status_model.py  get_user.py  get_versions.py  list_datasets.py  list_example_datasets.py  list_models.py  list_processes_model.py  load_example_dataset.py  predict_model.py  predict_request_model.py  predict_response_model.py  process_uploaded_dataset.py  sample_model.py  sample_request_model.py  sample_response_model.py  score_model.py  solve_inverse_model.py  solve_inverse_request_model.py  solve_inverse_response_model.py  summarise_dataset.py  summarise_model.py  train_model.py  train_request_model.py  train_response_model.py  upload_dataset.py  view_data_model.py  view_dataset.py  view_model.py
scripts/twinlab/: dataset_analyse.py  dataset_delete.py  dataset_summarise.py  dataset_upload.py  dataset_view.py  emulator_benchmark.py  emulator_calibrate.py  emulator_delete.py  emulator_design.py  emulator_get_process.py  emulator_learn.py  emulator_list_processes.py  emulator_predict.py  emulator_recommend.py  emulator_sample.py  emulator_score.py  emulator_status.py  emulator_summarise.py  emulator_train.py  emulator_view.py  emulator_view_test_data.py  emulator_view_train_data.py  example.py  get_api_key.py  get_server_url.py  list_datasets.py  list_emulators.py  list_example_datasets.py  load_example_dataset.py  set_api_key.py  set_server_url.py  user_information.py  versions.py
tests/: __init__.py  conftest.py  load.py  test_e2e.py  test_e2e_1d.py  test_e2e_v1.py  test_train.py
tests/api/: __init__.py  conftest.py  test_analyse_dataset.py  test_delete_dataset.py  test_delete_model.py  test_generate_upload_url.py  test_get_status_model.py  test_get_user.py  test_get_versions.py  test_list_datasets.py  test_list_models.py  test_load_example_dataset.py  test_process_uploaded_dataset.py  test_summarise_dataset.py  test_summarise_model.py  test_train_model.py  test_train_request_model.py  test_upload_dataset.py  test_use_model.py  test_use_request_model.py  test_use_response_model.py  test_view_data_model.py  test_view_dataset.py  test_view_model.py
tests/performance/: analyse_results.py  time_performance.py  timing_example.ipynb  utils.py
tests/test_e2e/: test_analyse_dataset.csv  test_benchmark_with_interval.csv  test_calibrate.yml  test_combined_score.csv  test_design.csv  test_design.yml  test_predict.csv  test_predict_without_noise.csv  test_predict_without_noise.yml  test_recommend_active_learn.csv  test_recommend_active_learn_acq_func.csv  test_recommend_optimise.csv  test_recommend_optimise_acq_func.csv  test_sample.csv  test_sample.yml  test_sample_large.yml  test_score.csv  test_score.yml
tests/test_e2e_1d/: test_recommend.csv  test_recommend.yml  test_recommend_acq_func.csv
tests/test_e2e_v1/: test_active_pipeline.csv  test_get_calibration_curve_campaign.csv  test_get_calibration_curve_campaign.yml  test_inverse_pipeline.csv  test_optimisation_pipeline.csv  test_optimisation_pipeline.yml  test_score_campaign.csv
tests/test_train/: test_classic_predict_mean.csv  test_classic_predict_std.csv  test_classic_summary.yml  test_classic_view.yml  test_functional_keys.yml  test_functional_predict_mean.csv  test_functional_predict_std.csv  test_functional_summary.yml  test_functional_summary_input.yml  test_functional_summary_output.yml  test_functional_view.yml  test_heteroskedastic_keys.yml  test_heteroskedastic_predict_mean.csv  test_heteroskedastic_predict_std.csv  test_heteroskedastic_summary.yml  test_heteroskedastic_view.yml  test_model_selection_predict_mean.csv  test_model_selection_predict_std.csv  test_model_selection_view.yml  test_multifidelity_keys.yml  test_multifidelity_predict_mean.csv  test_multifidelity_predict_std.csv  test_multifidelity_summary.yml  test_multifidelity_view.yml
tests/unit/: test_deprecation.py
tests/unit_v1/: test_get_calibration_curve.py  (+5 more)
twinlab/: __init__.py  _plotting.py  _utils.py  _version.py  api.py  client.py  core.py  dataset.py  distributions.py  emulator.py  helper.py  params.py  plotting.py  prior.py  project.py  sampling.py  settings.py  utils.py
(+110 files in other folders)
